cnd/cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/iz143044.cpp
struct A {
    void foo() {}
};

struct B : A {
   // void foo();
};

void B::foo() {
}

int main() {
    B b;
    b.foo();
    return 0;
}
